added navbar section with responsiveness

--- a/index.html
+++ b/index.html
@@ -19,13 +19,63 @@
       rel="stylesheet"
     />
     <style>
-        .font-lato {
-            font-family: "Lato", sans-serif;
-        }
+      .font-lato {
+        font-family: "Lato", sans-serif;
+      }
     </style>
   </head>
   <body class="font-lato">
-    <header></header>
+    <header class="container mx-auto my-8">
+        <!-- Navbar Section -->
+      <div class="navbar bg-[#F85559] rounded-full md:px-8 md:py-8">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h8m-8 6h16"
+                />
+              </svg>
+            </div>
+            <ul
+              tabindex="0"
+              class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
+            >
+              <li><a>Home</a></li>
+              <li><a>About Us</a></li>
+              <li><a>Shop</a></li>
+              <li><a>All Fruits</a></li>
+              
+            </ul>
+          </div>
+          <div class="space-x-9 text-white text-lg font-semibold hidden lg:flex">
+            <a href="#">Home</a>
+            <a href="#">About Us</a>
+            <a href="#">Shop</a>
+            <a href="#">All Fruits</a>
+          </div>
+        </div>
+        <div class="navbar-center">
+          <img class="max-w-[40px] md:w-full" src="./images/logo.png" alt="" />
+          <h6 class="ml-4 text-xl md:text-2xl font-semibold text-white">Fruit Burst</h6>
+        </div>
+        <div class="navbar-end ">
+          <div class="bg-white hidden lg:flex items-center justify-between rounded-full px-5 py-3">
+            <input type="text" placeholder="Search here" class="outline-none"/>
+            <img src="./images/search.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
