added team section with responsiveness

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/7107feeffd.js" crossorigin="anonymous"></script>
     <style>
       .font-lato {
         font-family: "Lato", sans-serif;
@@ -202,7 +204,7 @@
         </div>
       </div>
     </header>
-    <main class="container mx-auto my-8">
+    <main class="container mx-auto my-24">
       <!-- Deal of The Day Section -->
       <section>
         <div class="flex flex-col md:flex-row justify-between items-center">
@@ -394,8 +396,66 @@
             <button class="btn btn-ghost text-[#F85559]">Details</button>
           </div>
         </div>
-        <div class="text-center mt-12  border-none">
+        <div class="text-center mt-12 border-none">
           <button class="btn bg-[#F85559] text-white">Shop All</button>
+        </div>
+      </section>
+
+      <!-- Team Section -->
+      <section class="my-24">
+        <div
+          class="w-full rounded-lg bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/banner1.png)] bg-no-repeat bg-cover bg-center object-cover lg:h-[60vh] flex justify-center items-center"
+        >
+          <div class="text-center text-white space-y-12">
+            <h3 class="text-3xl md:text-5xl font-extrabold mt-12">Meet the team section</h3>
+            <p class="lg:max-w-[550px] font-medium mx-auto">
+              Contrary to popular belief, is not simply random text. It has
+              roots in a piece of classical Latin literature from 45 BC, making
+              it over 2000 years old.
+            </p>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:gap-24">
+              <div class="flex flex-col justify-center items-center space-y-3">
+                <img class="mb-4" src="./images/member1.png" alt="">
+                <h5 class="text-2xl font-bold">Awlad Hossain</h5>
+                <p class="font-medium">Fruits Expert</p>
+                <div class="space-x-3">
+                <i class="fa-brands fa-facebook text-[#F85559]"></i>
+                <i class="fa-brands fa-twitter text-[#F85559]"></i>
+                <i class="fa-brands fa-linkedin text-[#F85559]"></i>
+                </div>
+              </div>
+              <div class="flex flex-col justify-center items-center space-y-3">
+                <img class="mb-4" src="./images/member2.png" alt="">
+                <h5 class="text-2xl font-bold">Safia Chowdhury</h5>
+                <p class="font-medium">Fruits Expert</p>
+                <div class="space-x-3">
+                <i class="fa-brands fa-facebook text-[#F85559]"></i>
+                <i class="fa-brands fa-twitter text-[#F85559]"></i>
+                <i class="fa-brands fa-linkedin text-[#F85559]"></i>
+                </div>
+              </div>
+              <div class="flex flex-col justify-center items-center space-y-3">
+                <img class="mb-4" src="./images/member3.png" alt="">
+                <h5 class="text-2xl font-bold">Rokib Hossain</h5>
+                <p class="font-medium">Fruits Expert</p>
+                <div class="space-x-3">
+                <i class="fa-brands fa-facebook text-[#F85559]"></i>
+                <i class="fa-brands fa-twitter text-[#F85559]"></i>
+                <i class="fa-brands fa-linkedin text-[#F85559]"></i>
+                </div>
+              </div>
+              <div class="flex flex-col justify-center items-center space-y-3">
+                <img class="mb-4" src="./images/member4.png" alt="">
+                <h5 class="text-2xl font-bold">Chaity</h5>
+                <p class="font-medium">Fruits Expert</p>
+                <div class="space-x-3">
+                <i class="fa-brands fa-facebook text-[#F85559]"></i>
+                <i class="fa-brands fa-twitter text-[#F85559]"></i>
+                <i class="fa-brands fa-linkedin text-[#F85559]"></i>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
