added why choose us section with responsiveness

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       rel="stylesheet"
     />
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/7107feeffd.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/7107feeffd.js"
+      crossorigin="anonymous"
+    ></script>
     <style>
       .font-lato {
         font-family: "Lato", sans-serif;
@@ -407,51 +410,168 @@
           class="w-full rounded-lg bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/banner1.png)] bg-no-repeat bg-cover bg-center object-cover lg:h-[60vh] flex justify-center items-center"
         >
           <div class="text-center text-white space-y-12">
-            <h3 class="text-3xl md:text-5xl font-extrabold mt-12">Meet the team section</h3>
+            <h3 class="text-3xl md:text-5xl font-extrabold mt-12">
+              Meet the team section
+            </h3>
             <p class="lg:max-w-[550px] font-medium mx-auto">
               Contrary to popular belief, is not simply random text. It has
               roots in a piece of classical Latin literature from 45 BC, making
               it over 2000 years old.
             </p>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:gap-24">
+            <div
+              class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:gap-24"
+            >
               <div class="flex flex-col justify-center items-center space-y-3">
-                <img class="mb-4" src="./images/member1.png" alt="">
+                <img class="mb-4" src="./images/member1.png" alt="" />
                 <h5 class="text-2xl font-bold">Awlad Hossain</h5>
                 <p class="font-medium">Fruits Expert</p>
                 <div class="space-x-3">
-                <i class="fa-brands fa-facebook text-[#F85559]"></i>
-                <i class="fa-brands fa-twitter text-[#F85559]"></i>
-                <i class="fa-brands fa-linkedin text-[#F85559]"></i>
+                  <i class="fa-brands fa-facebook text-[#F85559]"></i>
+                  <i class="fa-brands fa-twitter text-[#F85559]"></i>
+                  <i class="fa-brands fa-linkedin text-[#F85559]"></i>
                 </div>
               </div>
               <div class="flex flex-col justify-center items-center space-y-3">
-                <img class="mb-4" src="./images/member2.png" alt="">
+                <img class="mb-4" src="./images/member2.png" alt="" />
                 <h5 class="text-2xl font-bold">Safia Chowdhury</h5>
                 <p class="font-medium">Fruits Expert</p>
                 <div class="space-x-3">
-                <i class="fa-brands fa-facebook text-[#F85559]"></i>
-                <i class="fa-brands fa-twitter text-[#F85559]"></i>
-                <i class="fa-brands fa-linkedin text-[#F85559]"></i>
+                  <i class="fa-brands fa-facebook text-[#F85559]"></i>
+                  <i class="fa-brands fa-twitter text-[#F85559]"></i>
+                  <i class="fa-brands fa-linkedin text-[#F85559]"></i>
                 </div>
               </div>
               <div class="flex flex-col justify-center items-center space-y-3">
-                <img class="mb-4" src="./images/member3.png" alt="">
+                <img class="mb-4" src="./images/member3.png" alt="" />
                 <h5 class="text-2xl font-bold">Rokib Hossain</h5>
                 <p class="font-medium">Fruits Expert</p>
                 <div class="space-x-3">
-                <i class="fa-brands fa-facebook text-[#F85559]"></i>
-                <i class="fa-brands fa-twitter text-[#F85559]"></i>
-                <i class="fa-brands fa-linkedin text-[#F85559]"></i>
+                  <i class="fa-brands fa-facebook text-[#F85559]"></i>
+                  <i class="fa-brands fa-twitter text-[#F85559]"></i>
+                  <i class="fa-brands fa-linkedin text-[#F85559]"></i>
                 </div>
               </div>
               <div class="flex flex-col justify-center items-center space-y-3">
-                <img class="mb-4" src="./images/member4.png" alt="">
+                <img class="mb-4" src="./images/member4.png" alt="" />
                 <h5 class="text-2xl font-bold">Chaity</h5>
                 <p class="font-medium">Fruits Expert</p>
                 <div class="space-x-3">
-                <i class="fa-brands fa-facebook text-[#F85559]"></i>
-                <i class="fa-brands fa-twitter text-[#F85559]"></i>
-                <i class="fa-brands fa-linkedin text-[#F85559]"></i>
+                  <i class="fa-brands fa-facebook text-[#F85559]"></i>
+                  <i class="fa-brands fa-twitter text-[#F85559]"></i>
+                  <i class="fa-brands fa-linkedin text-[#F85559]"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Why Choose Us Section -->
+      <section class="my-24">
+        <div>
+          <h1 class="text-5xl text-center font-extrabold">Why Choose Us</h1>
+          <p class="text-center font-medium lg:max-w-[550px] mx-auto">
+            Contrary to popular belief, is not simply random text. It has roots
+            in a piece of classical Latin literature from 45 BC, making it over
+            2000 years old.
+          </p>
+          <div class="grid grid-cols-1 lg:grid-cols-3 gap-12 mt-12">
+            <div>
+              <div class="flex itecen space-x-3 mb-3">
+                <div
+                  class="h-12 w-12 rounded-full bg-slate-200 flex justify-center items-center"
+                >
+                  <img src="./images/group1.png" alt="" />
+                </div>
+                <div>
+                  <h5 class="text-2xl font-extrabold">Dedicated Team</h5>
+                  <div class="divider"></div>
+                  <p class="md:max-w-[400px] font-medium mx-auto">
+                    Professional employees are there for you to pick the most
+                    amazing and fresh fruits.
+                  </p>
+                </div>
+              </div>
+              <div class="flex space-x-3 mb-3">
+                <div
+                  class="h-12 w-12 rounded-full bg-slate-200 flex justify-center items-center"
+                >
+                  <img src="./images/love1.png" alt="" />
+                </div>
+                <div>
+                  <h5 class="text-2xl font-extrabold">Fresh is Best</h5>
+                  <div class="divider"></div>
+                  <p class="md:max-w-[400px] font-medium mx-auto">
+                    Professional employees are there for you to pick the most
+                    amazing and fresh fruits.
+                  </p>
+                </div>
+              </div>
+              <div class="flex space-x-3 mb-3">
+                <div
+                  class="h-12 w-12 rounded-full bg-slate-200 flex justify-center items-center"
+                >
+                  <img src="./images/gift-box1.png" alt="" />
+                </div>
+                <div>
+                  <h5 class="text-2xl font-extrabold">Gift Certificates</h5>
+                  <div class="divider"></div>
+                  <p class="md:max-w-[400px] font-medium mx-auto">
+                    Professional employees are there for you to pick the most
+                    amazing and fresh fruits.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <img src="./images/whychoose1.png" alt="" />
+            </div>
+            <div>
+              <div>
+                <div class="flex space-x-3 mb-3">
+                  <div class="text-right">
+                    <h5 class="text-2xl font-extrabold">Integrated Supplier</h5>
+                    <div class="divider"></div>
+                    <p class="md:max-w-[400px] font-medium mx-auto">
+                      Professional employees are there for you to pick the most
+                      amazing and fresh fruits.
+                    </p>
+                  </div>
+                  <div
+                    class="h-12 w-12 rounded-full bg-slate-200 flex justify-center items-center"
+                  >
+                    <img src="./images/fruit-1.png" alt="" />
+                  </div>
+                </div>
+                <div class="flex space-x-3 mb-3">
+                  <div class="text-right">
+                    <h5 class="text-2xl font-extrabold">Sustainable Practice</h5>
+                    <div class="divider"></div>
+                    <p class="md:max-w-[400px] font-medium mx-auto">
+                      Professional employees are there for you to pick the most
+                      amazing and fresh fruits.
+                    </p>
+                  </div>
+                  <div
+                    class="h-12 w-12 rounded-full bg-slate-200 flex justify-center items-center"
+                  >
+                    <img src="./images/ice-cream1.png" alt="" />
+                  </div>
+                </div>
+                <div class="flex space-x-3 mb-3">
+                  <div class="text-right">
+                    <h5 class="text-2xl font-extrabold">The Benefits Only</h5>
+                    <div class="divider"></div>
+                    <p class="md:max-w-[400px] font-medium mx-auto">
+                      Professional employees are there for you to pick the most
+                      amazing and fresh fruits.
+                    </p>
+                  </div>
+                  <div
+                    class="h-12 w-12 rounded-full bg-slate-200 flex justify-center items-center"
+                  >
+                    <img src="./images/like1.png" alt="" />
+                  </div>
                 </div>
               </div>
             </div>
