--- a/index.html
+++ b/index.html
@@ -545,7 +545,9 @@
                 </div>
                 <div class="flex space-x-3 mb-3">
                   <div class="text-right">
-                    <h5 class="text-2xl font-extrabold">Sustainable Practice</h5>
+                    <h5 class="text-2xl font-extrabold">
+                      Sustainable Practice
+                    </h5>
                     <div class="divider"></div>
                     <p class="md:max-w-[400px] font-medium mx-auto">
                       Professional employees are there for you to pick the most
@@ -579,6 +581,33 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer
+      class="footer footer-center p-10 bg-base-200 text-base-content rounded bg-[#121212]"
+    >
+      <div class="flex justify-center items-center">
+        <img class="max-w-[40px] md:w-full" src="./images/logo.png" alt="" />
+        <h6 class="ml-4 text-xl md:text-4xl font-bold text-white">
+          Fruit Burst
+        </h6>
+      </div>
+      <nav class="grid grid-flow-col gap-10 text-white">
+        <a class="link link-hover">Home</a>
+        <a class="link link-hover">About Us</a>
+        <a class="link link-hover">Shop</a>
+        <a class="link link-hover">All Fruits</a>
+        <a class="link link-hover">Support</a>
+        <a class="link link-hover">My Account</a>
+      </nav>
+      <nav>
+        <div class="grid grid-flow-col gap-10 text-white text-3xl">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-youtube"></i>
+          <i class="fa-brands fa-linkedin"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-apple"></i>
+        </div>
+      </nav>
+    </footer>
   </body>
 </html>
